# castep_elnes_parser

./: .buildinfo  .gitignore  LICENSE  README.md  __version__.py  castep_elnes_parser.html  castep_elnes_parser.py  ceparser.py  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js  setup.cfg  setup.py
.devcontainer/: Dockerfile  devcontainer.json  requirements.txt
.doctrees/: castep_elnes_parser.doctree  environment.pickle  index.doctree
.github/workflows/: gh-pages.yml
_modules/: castep_elnes_parser.html  ceparser.html  index.html
_sources/: castep_elnes_parser.rst.txt
_static/: documentation_options.js
docs/: castep_elnes_parser.rst  conf.py  index.rst
