[metadata]
name = castep_elnes_parser
version = attr: __version__.__version__
description = A simple python script for parsing CASTEP output files especially for ELNES calculations.,
long_description = A simple python script for parsing [CASTEP](http://www.castep.org/) output files especially for ELNES calculations. Contains some functions for calculating excitation energies and forming spectra
author = kiyou, nmdl-mizo
license = MIT
url = https://github.com/nmdl-mizo/castep_elnes_parser
classifiers = 
# https://pypi.python.org/pypi?:action=list_classifiers
        Intended Audience :: Science/Research
        Topic :: Scientific/Engineering :: Physics
        Programming Language :: Python :: 3 :: Only
        License :: OSI Approved :: MIT License
keywords = tools

[options]
py_modules = ceparser
install_requires = numpy
